; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_count-objects.c_loose_garbage.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_count-objects.c_loose_garbage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@verbose = common dso_local global i64 0, align 8
@PACKDIR_FILE_GARBAGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @loose_garbage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @loose_garbage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i64, i64* @verbose, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i32, i32* @PACKDIR_FILE_GARBAGE, align 4
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @report_garbage(i32 %6, i8* %7)
  br label %9

9:                                                ; preds = %5, %1
  ret void
}

declare dso_local i32 @report_garbage(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
